# web-ux

./: .env.example  .gitignore  CASE_STUDY.md  README.md  TECHNICAL_JOURNEY.md  pyproject.toml
.github/workflows/: daily.yml  pages.yml
docs/: app.js  index.html  styles.css
docs/data/: latest.json
src/gdweb_daily/: __init__.py  analysis.py  config.py  gdweb.py  http.py  models.py  notion.py  runner.py  state.py  website.py
state/: checkpoint.json
tests/: test_dashboard.py  test_notion.py  test_parsers.py
