[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gdweb-daily"
version = "0.1.0"
description = "GDWEB WEB 선정작 평일 수집 및 Notion 자동 기록"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12,<5",
  "requests>=2.32,<3",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9"]

[project.scripts]
gdweb-daily = "gdweb_daily.runner:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

